Pricing: Fix overlapping columns

--- a/static/css/pricing.css
+++ b/static/css/pricing.css
@@ -66,7 +66,7 @@ are kept in here in case we use them later.
   left: 3px;
 }
 .Rtable-cell {
-  margin: -3px 0 0 -3px;
+  margin: -3px 0 1 -3px;
   background-color: white;
   border-color: #ebccd1;
 }
